# rust_front

./: .env.example  Cargo.toml  askama.toml
screens/: appointments.html  delete_patient_modal.html  delete_physician_modal.html  home.html  index.html  new_patient.html  new_physician.html  patients.html  physician_list.html  physicians.html
src/: main.rs
src/components/: hello_form.rs  index.rs  mod.rs  patient_list.rs
src/core/: app_state.rs
src/handlers/: appointments.rs  home.rs  index.rs  mod.rs  new_patient.rs  new_physician.rs  patient_list.rs  patients.rs  physician_list.rs  physicians.rs
src/models/: appointment.rs  mod.rs  new_patient.rs  new_physician.rs  patient.rs  patient_model.rs  physician.rs
src/screens/: index.rs  mod.rs
src/services/: appointments_service.rs  mod.rs  patients_service.rs  physicians_service.rs
styles/: delete_patient_modal.css
templates/: hello_form.html  index.html  patient_list.html
