[package]
name = "rust_front"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = {version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
axum = {version = "0.7.9", features = ["macros"]}
serde = {version = "1.0.218", features = ["derive"]}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"]}
