[package]
name = "rust_front"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
askama = {version = "0.12.1"}
askama_web = {version = "0.0.1-pre.0", features = ["axum-0.8"]}
axum = {version = "0.8.1", features = ["macros"]}
dotenvy = {version = "0.15.7"}
reqwest = {version = "0.12.12", features = ["json"] }
serde = {version = "1.0.218", features = ["derive"]}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"]}
tower-http = {version = "0.6.2", features = ["fs"] }
